--- a/login.html
+++ b/login.html
@@ -48,8 +48,11 @@
     <nav id="navbarPlaceholder"></nav>
 
     <!-- the body of your page goes here -->
-    <!-- stuff -->
-
+    <div class="container">
+        <h1>Let's Login!</h1>
+    </div>
+    <div id="firebaseui-auth-container"></div>
+    <div id="loader">Loading...</div>
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
 
@@ -58,7 +61,8 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAM99.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <!-- <script src="./scripts/script.js"></script> -->
+    <script src="./scripts/authentication.js"></script>
+    <script src="./scripts/script.js"></script>
 
 </body>
 
