--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -16,8 +16,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../profile.html">Profile</a>
                 </li>
-                    <a class="nav-link" href="../main.html">About Us</a>
-                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="../aboutus.html">About Us</a>
+                </li> -->
+                    <!-- <a class="nav-link" href="../aboutus.html">About Us</a>
+                </li> -->
             </ul>
             <div class="d-flex">
                 <a class="btn btn-outline-success" href="../index.html">Logout</a>
